Fix overlapping issues

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -16,7 +16,7 @@
   height: 720px;
   object-fit: cover;
   width: 100%;
-  z-index: -1;
+  z-index: -10;
   filter: brightness(0.66);
 }
 
@@ -42,7 +42,6 @@
   padding-left: 12px;
   padding-right: 10%;
   position: absolute;
-  z-index: -1;
 }
 
 .image-text {
@@ -77,4 +76,5 @@
   justify-items: center;
   width: 100%;
   max-width: 1200px;
+  z-index: 50;
 }
